--- a/app/src/main/res/layout/activity_courir.xml
+++ b/app/src/main/res/layout/activity_courir.xml
@@ -12,86 +12,56 @@
         android:id="@+id/text_chronometer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="98dp"
-        android:layout_marginBottom="80dp"
         android:text="Chronomètre : 0:00:000"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/lap_count_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="24sp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_distance" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
 
     <TextView
         android:id="@+id/text_distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="163dp"
-        android:layout_marginTop="197dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="13dp"
         android:text="Distance initiale"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/text_chronometer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.125"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/text_chronometer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button_zone_de_tir"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="169dp"
-        android:layout_marginTop="67dp"
-        android:layout_marginEnd="147dp"
-        android:layout_marginBottom="336dp"
-        android:text="Zone de tir"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/shoot_distance_text_view" />
+        android:layout_marginTop="32dp"/>
 
     <TextView
         android:id="@+id/lap_count_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="201dp"
-        android:layout_marginEnd="190dp"
-        android:layout_marginBottom="100dp"
-        android:text="nbtour"
-        app:layout_constraintBottom_toTopOf="@+id/distance_text_view"
+        android:text="Tours restants : 0"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/text_distance"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.812"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="32dp"/>
 
     <TextView
         android:id="@+id/distance_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="179dp"
-        android:text="distance"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:text="Distance : 0m"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/lap_count_text_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lap_count_text_view" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
 
     <TextView
         android:id="@+id/shoot_distance_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="171dp"
-        android:layout_marginTop="57dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginBottom="75dp"
-        android:text="ditance de tir"
-        app:layout_constraintBottom_toTopOf="@+id/button_zone_de_tir"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Distance de tir : 0m"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/distance_text_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/distance_text_view" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
 
     <Button
         android:id="@+id/button_next_phase"
@@ -99,6 +69,20 @@
         android:layout_height="wrap_content"
         android:text="Commencer le tir"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/button_finish"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginHorizontal="32dp"
+        android:padding="16dp"/>
+
+    <Button
+        android:id="@+id/button_finish"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Terminer l'entraînement"
+        android:textSize="20sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
