--- a/app/src/main/res/layout/activity_zone_de_tir.xml
+++ b/app/src/main/res/layout/activity_zone_de_tir.xml
@@ -1,31 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="16dp">
 
     <TextView
         android:id="@+id/text_chronometer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chronomètre : 0:00:000"
-        android:textSize="18sp" />
+        android:text="00:00"
+        android:textSize="48sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
 
     <TextView
-        android:id="@+id/text_no_target"
+        android:id="@+id/text_remaining_shots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pas de cible touchée"
-        android:layout_marginTop="16dp"
-        android:textSize="18sp" />
+        android:text="Sélectionnez le nombre de tirs manqués"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/text_chronometer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
+
+    <LinearLayout
+        android:id="@+id/buttons_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/text_remaining_shots"
+        android:layout_marginTop="32dp">
+
+        <Button
+            android:id="@+id/button_0"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="0"
+            android:textSize="20sp"
+            android:layout_margin="4dp"/>
+
+        <Button
+            android:id="@+id/button_1"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="1"
+            android:textSize="20sp"
+            android:layout_margin="4dp"/>
+
+        <Button
+            android:id="@+id/button_2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="2"
+            android:textSize="20sp"
+            android:layout_margin="4dp"/>
+
+        <Button
+            android:id="@+id/button_3"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="3"
+            android:textSize="20sp"
+            android:layout_margin="4dp"/>
+
+        <Button
+            android:id="@+id/button_4"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="4"
+            android:textSize="20sp"
+            android:layout_margin="4dp"/>
+
+        <Button
+            android:id="@+id/button_5"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:text="5"
+            android:textSize="20sp"
+            android:layout_margin="4dp"/>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/button_reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Corriger"
+        android:enabled="false"
+        app:layout_constraintTop_toBottomOf="@id/buttons_container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <Button
         android:id="@+id/button_next"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Suivant"
-        android:layout_marginTop="32dp" />
+        android:text="Terminer la série"
+        android:enabled="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="32dp"
+        android:layout_marginHorizontal="32dp"
+        android:padding="16dp"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
